--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
                                 <div class="col-12">
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
                                    <form>
+                                    <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
 
                                     <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
                                 </form>
