--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 10px;">
-                    <div class="position-relative h-100">
+                 <!--   <div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit:none;">
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-lg-7">
                     <div class="mb-4">
