--- a/registration.html
+++ b/registration.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>جائزة بني علي للتميز</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-     <meta content="جائزة بني علي للتميز" name="keywords">
-    <meta content="جائزة بني علي للتميز" name="description">
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -182,7 +182,7 @@
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
                                    <form>
 
-                                    <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
+                                    <button style="font-size: 32PX;" formtarget="_blank" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
                                 </form>
                                 </div>
                             </div>
