--- a/vision.html
+++ b/vision.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>جائزة بني علي للتميز</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-     <meta content="جائزة بني علي للتميز" name="keywords">
+    <meta content="جائزة بني علي للتميز" name="keywords">
     <meta content="جائزة بني علي للتميز" name="description">
 
     <!-- Favicon -->
@@ -121,9 +121,9 @@
     <div class="container">
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 50px;">
-                <div class="position-relative h-100">
+                <!--<div class="position-relative h-100">
                     <img class="position-absolute w-40 h-40 rounded" src="img/about.jpg" style="object-fit:none;">
-                </div>
+                </div>-->
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
@@ -144,9 +144,9 @@
     <div class="container">
         <div class="row gx-5">
             <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
-                <div class="position-relative h-100">
+                <!--<div class="position-relative h-100">
                     <img class="position-absolute w-40 h-40 rounded" src="img/about.jpg" style="object-fit:none;">
-                </div>
+                </div>-->
             </div>
             <div class="col-lg-7">
                 <div class="mb-4">
