--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>جائزة بني علي للتميز</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-     <meta content="جائزة بني علي للتميز" name="keywords">
-    <meta content="جائزة بني علي للتميز" name="description">
+    <meta content="Free HTML Templates" name="keywords">
+    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
