--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 10px;">
-                 <!--   <div class="position-relative h-100">
+                    <!--<div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit:none;">
                     </div>-->
                 </div>
@@ -148,9 +148,13 @@
                         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">عن الجائزة</h5>
                         <h1 class="display-4">جائزة بني علي للتميز</h1>
                     </div>
-                    <p style="font-size: 18px;text-align: justify;color: #071437;">تشهد المملكة العربية السعودية ( الوطن الغالي ) ومن ضمنها منطقة نجران تطوراً ونمواً متسارعًا في العديد من المجالات على مستوى المنظمات والأفراد، وفي ظل ذلك نعلن عن جائزة بني علي يام ( آل عتيق – آل دعير – آل قريعة – آل حزام – آل قلم ) للتميز والإبداع لتشجيع الأفراد وإبرازهم وتكريم المتميزين والمتميزات منهم. 
-                        وبدعم واهتمام الجميع ستحظى وترقى الجائزة إلى مصاف الجوائز وتحقق أهدافها السامية لخدمة وطن العطاء والنماء والمساهمة في تحقيق رؤيته المستقبلية 2030 .
-                        ومن منطلق الإبداع والتميز فقد حرصت أمانة الجائزة على أن تكون معايير الجائزة ذات جودة عالية ومواصفات عالمية لتواكب رؤية المملكة 2030 وتحقيق الريادة والتميز والإبداع في الأداء.
+                    <p style="font-size: 18px;text-align: justify;color: #071437;">
+                        تشهد المملكة العربية السعودية ( الوطن الغالي ) في عهد مليكنا المفدى خادم الحرمين الشريفين الملك سلمان بن عبدالعزيز آل سعود وسمو ولي عهده الأمين صاحب السمو الملكي الأمير محمد بن عبدالعزيز آل سعود ( حفظهما الله ) تطوراً ونمواً متسارعًا في العديد من المجالات على مستوى المنظمات والأفراد، وفي ظل ذلك نعلن عن جائزة بني علي يام ( آل عتيق – آل دعير – آل قريعة – آل حزام – آل قلم ) للتميز والإبداع لتشجيع الأفراد وإبرازهم وتكريم المتميزين والمتميزات منهم.
+<br>
+وبدعم واهتمام الجميع ستحظى وترقى الجائزة إلى مصاف الجوائز وتحقق أهدافها السامية لخدمة وطن العطاء والنماء والمساهمة في تحقيق رؤيته المستقبلية 2030 .
+<br>
+ومن منطلق الإبداع والتميز فقد حرصت أمانة الجائزة على أن تكون معايير الجائزة ذات جودة عالية ومواصفات عالمية لتواكب رؤية المملكة 2030 وتحقيق الريادة والتميز والإبداع في الأداء.
+
                         </p>
                     <div class="row g-3 pt-3">
                         <div class="col-sm-3 col-6">
@@ -189,9 +193,9 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 5px;">
-                    <div class="position-relative h-100">
+                    <!--<div class="position-relative h-100">
                         <img class="position-absolute w-40 h-40 rounded" src="img/about.jpg" style="object-fit:none;">
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-lg-7">
                     <div class="mb-4">
@@ -408,7 +412,8 @@
                                 <div class="col-12">
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
                                    <form>
-                                    <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
+
+                                    <button formtarget="_blank" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">اضغط هنا للتسجيل</button>
                                 </form>
                                 </div>
                             </div>
@@ -458,7 +463,7 @@
                             <!--<input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
                             <button class="btn btn-primary">Sign Up</button>-->
                             <p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
-                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
+                            <button formtarget="_blank" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">اضغط هنا للتسجيل</button>
                         </div>
                     </form>
                     <!--<h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
