--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
                                    <form>
 
-                                    <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
+                                    <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
                                 </form>
                                 </div>
                             </div>
