--- a/index.html
+++ b/index.html
@@ -412,7 +412,6 @@
                                 <div class="col-12">
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
                                    <form>
-
                                     <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
                                 </form>
                                 </div>
@@ -463,7 +462,7 @@
                             <!--<input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
                             <button class="btn btn-primary">Sign Up</button>-->
                             <p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
-                            <button formtarget="_blank" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">اضغط هنا للتسجيل</button>
+                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">اضغط هنا للتسجيل</button>
                         </div>
                     </form>
                     <!--<h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
