--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <h1 class="display-4">جائزة بني علي للتميز</h1>
                     </div>
                     <p style="font-size: 18px;text-align: justify;color: #071437;">
-                        تشهد المملكة العربية السعودية ( الوطن الغالي ) في عهد مليكنا المفدى خادم الحرمين الشريفين الملك سلمان بن عبدالعزيز آل سعود وسمو ولي عهده الأمين صاحب السمو الملكي الأمير محمد بن عبدالعزيز آل سعود ( حفظهما الله ) تطوراً ونمواً متسارعًا في العديد من المجالات على مستوى المنظمات والأفراد، وفي ظل ذلك نعلن عن جائزة بني علي يام ( آل عتيق – آل دعير – آل قريعة – آل حزام – آل قلم ) للتميز والإبداع لتشجيع الأفراد وإبرازهم وتكريم المتميزين والمتميزات منهم.
+                        تشهد المملكة العربية السعودية ( الوطن الغالي ) في عهد مليكنا المفدى خادم الحرمين الشريفين الملك سلمان بن عبدالعزيز آل سعود وسمو ولي عهده الأمين صاحب السمو الملكي الأمير محمد بن سلمان بن عبدالعزيز آل سعود ( حفظهما الله ) تطوراً ونمواً متسارعًا في العديد من المجالات على مستوى المنظمات والأفراد، وفي ظل ذلك نعلن عن جائزة بني علي يام ( آل عتيق – آل دعير – آل قريعة – آل حزام – آل قلم ) للتميز والإبداع لتشجيع الأفراد وإبرازهم وتكريم المتميزين والمتميزات منهم.
 <br>
 وبدعم واهتمام الجميع ستحظى وترقى الجائزة إلى مصاف الجوائز وتحقق أهدافها السامية لخدمة وطن العطاء والنماء والمساهمة في تحقيق رؤيته المستقبلية 2030 .
 <br>
