--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <a href="Threads.html" class="nav-item nav-link">المعايير</a>
                     <!--<a href="ss-ss.html" class="nav-item nav-link">الرعاة</a>-->
                     <!--<a href="committee.html" class="nav-item nav-link">لجنة الجائزة</a>-->
-                    <a href="registration.html" class="nav-item nav-link">التسجيل</a>
+                    <!--<a href="registration.html" class="nav-item nav-link">التسجيل</a>-->
                     <!--<a href="winner.html" class="nav-item nav-link">الفائزين</a>-->
                     <!--<a href="#" class="nav-item nav-link">المركز الإعلامي</a>-->
                     <!--<a href="contact.html" class="nav-item nav-link">للتواصل</a>-->
