--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         <a class="text-light" href="registration.html"><i class="fa fa-angle-right me-2"></i>التسجيل</a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!--<div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">التسجيل</h4>
                     <form action="">
                         <div class="input-group">
@@ -472,7 +472,7 @@
                         <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
                     </div>-->
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
