--- a/Threads.html
+++ b/Threads.html
@@ -132,11 +132,12 @@
                     <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                         <img class="img-fluid" src="img/serv.png" width="100" height="99" alt="">
                         <h4 class="mb-3">التميز العلمي </h4>
-                        <h5>التميز في المراحل الدارسية التالية :</h5>
+                        <h5>التميز في المراحل الدارسية التالية لعام 2023 فقط :</h5>
                         <ul style="font-size: 18px;text-align:right;color: #071437;">
-                            <li>المرحلة الثانوية</li>
-                            <li>مرحلة الدبلوم</li>
-                            <li>مرحلة البكالوريوس</li>
+                            <li>المرحلة الثانوية النسبة الموزونة ممتاز</li>
+                            <li>مرحلة الدبلوم المعدل التراكمي ممتاز</li>
+                            <li>مرحلة البكالوريوس المعدل التراكمي ممتاز</li>
+                            <li>الزمالة الطبية</li>
                             <li>الحاصلين والحاصلات على درجة الماجسيتر</li>
                             <li>الحاصلين والحاصلات على درجة الدكتوراه</li>
                         </ul>
