--- a/Threads.html
+++ b/Threads.html
@@ -149,7 +149,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                         <img class="img-fluid" src="img/serv.png" width="100" height="99" alt="">
-                        <h4 class="mb-3">التميز العملي والوظيفي</h4>
+                        <h4 class="mb-3">التميز العملي والوظيفي لعام 2023 فقط</h4>
                         <h5>التميز في وظيفتك  :</h5>
                         <ul style="font-size: 18px;text-align:right;color: #071437;">
                             <li>الحصول على شهادة التميز</li>
