--- a/blog.html
+++ b/blog.html
@@ -221,14 +221,14 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <!--<h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">التسجيل</h4>-->
-                <!--<form action="">
+                <form action="">
                     <div class="input-group">
                         <!--<input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
                         <button class="btn btn-primary">Sign Up</button>-->
-                        <p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
-                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
+                         <!--<p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
+                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>-->
                     </div>
-                </form>-->
+                </form>
                 <!--<h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
                 <div class="d-flex">
                     <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
