--- a/index.html
+++ b/index.html
@@ -353,18 +353,18 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-6 mb-5 mb-lg-0">
-                    <div class="mb-4">
+                  <!--  <div class="mb-4">
                         <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">التسجيل</h5>
                         <h1 class="display-4">مرحباً بكم في جائزة بني علي للتميز</h1>
-                    </div>
-                    <p class="mb-5" style="font-size: 28px;text-align: justify;color: #071437;">التقديم لمجالات الجائزة يتم عبر الموقع الإلكتروني، وذلك من خلال تعبئة النموذج وتحميل المسوغات والأدلة للطلب من قبل الأفراد "ذكور أو إناث". <br>مع دعواتنا للجميع بالتوفيق </p>
+                    </div>-->
+                    <!--<p class="mb-5" style="font-size: 28px;text-align: justify;color: #071437;">التقديم لمجالات الجائزة يتم عبر الموقع الإلكتروني، وذلك من خلال تعبئة النموذج وتحميل المسوغات والأدلة للطلب من قبل الأفراد "ذكور أو إناث". <br>مع دعواتنا للجميع بالتوفيق </p>-->
                     <!--<a class="btn btn-primary rounded-pill py-3 px-5 me-3" href="">Find Doctor</a>
                     <a class="btn btn-outline-primary rounded-pill py-3 px-5" href="">Read More</a>-->
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-light text-center rounded p-5">
-                        <h1 class="mb-4">نموذج التسجيل</h1>
-                        <p class="mb-5" style="font-size: 28px;text-align: center;color: #071437;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
+                        <!--<h1 class="mb-4">نموذج التسجيل</h1>
+                        <p class="mb-5" style="font-size: 28px;text-align: center;color: #071437;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>-->
                         <form>
                             <div class="row g-3">
                                 <!--<div class="col-12 col-sm-6">
@@ -411,9 +411,9 @@
                                 </div>-->
                                 <div class="col-12">
                                    <!-- <a href="https://twitter.com/home" target="_blank"><button class="btn btn-primary w-100 py-3" onclick="window.location.href='https://twitter.com/home';">اضغط هنا لإكمال التسجيل</button></a>-->
-                                   <form>
+                                   <!--<form>
                                     <button style="font-size: 32PX;" class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الـضـغـط هـنـا لـلـتـسـجـيـل</button>
-                                </form>
+                                </form>-->
                                 </div>
                             </div>
                         </form>
@@ -457,14 +457,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                   <!--  <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">التسجيل</h4>-->
-                    <!--<form action="">
+                    <form action="">
                         <div class="input-group">
                             <!--<input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
                             <button class="btn btn-primary">Sign Up</button>-->
-                            <p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
-                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
+                            <!--<p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
+                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>-->
                         </div>
-                    </form>-->
+                    </form>
                     <!--<h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
                     <div class="d-flex">
                         <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
