--- a/vision.html
+++ b/vision.html
@@ -198,8 +198,8 @@
                     <div class="input-group">
                         <!--<input type="text" class="form-control p-3 border-0" placeholder="Your Email Address">
                         <button class="btn btn-primary">Sign Up</button>-->
-                        <p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
-                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>
+                         <!--<p class="mb-5" style="font-size: 14px;text-align: center;color: #ffffff;">التسجيل خلال فترة محددة وسيتم الإعلان عنها لاحقاً</p>
+                            <button class="btn btn-primary w-100 py-3" type="submit" formaction="index.html">الضغط هنا للتسجيل</button>-->
                     </div>
                 </form>-->
                 <!--<h6 class="text-primary text-uppercase mt-4 mb-3">Follow Us</h6>
